# crowd_certain

./: .gitignore  .markdownlint.json  1.3.3_paper_figures_per_dataset.ipynb  README.md  __init__.py  crowd.code-workspace  needs_profiling.prof  pyproject.toml  requirements.txt  requirements.yml  setup.py  utils_crowd_refactored.py
crowd/: config.json  load_data_crowd.py
crowd/datasets/: ionosphere.p  spambase.p
crowd/utilities/: 1.3.3_paper_figures_per_dataset.py  __init__.py  utils.py
crowd_certain/: __init__.py  config.json  main.py  run_streamlit.py  test_config.json
crowd_certain/config/: __init__.py  activate_env.sh  environment.yml  requirements.txt
crowd_certain/datasets/: outputs.p  waveform.p
crowd_certain/docs/: API.md  DASHBOARD.md  EXAMPLES.md  INSTALLATION.md  README.md  STREAMLIT_TO_WEB.md  UCI_ML_REPO.md  USAGE.md  WEB_DEV.md  index.md
crowd_certain/examples/: 1.3.4_paper_figures_final.py  (+6 more)
docs/: README.md  UCI_ML_REPO.md  WEB_DEV.md  index.md
examples/: 1.3.3_paper_figures_per_dataset.py  1.3.4_paper_figures_final.py  all_datasets_example.py  custom_techniques_example.py  run_dashboard_example.py  save_load_results_example.py  single_dataset_example.py  visualize_results_example.py
notebooks/: 1.3.1 detailed-subversion.ipynb  1.3.2 weight_worker_strength_comparison.ipynb  1.3.4_paper_figures_final.ipynb
scripts/: activate_env.sh  install.bat  install.sh  run_dashboard.bat  run_dashboard.sh  test_reorganization.sh
tests/: conftest.py  test_config_functions.py  test_dataset_loader.py  test_multiple_datasets.py  test_utils.py
(+238 files in other folders)
