[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowd-certain"
version = "1.0.0"
description = "A comprehensive framework for crowd-sourced label aggregation with uncertainty estimation and confidence scoring"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Artin Majdi", email = "msm2024@gmail.com"}
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"crowd_certain" = [
    "config/*.json",
    "config/*.toml",
    "config/requirements.txt",
    "docs/**/*",
    "scripts/**/*",
    "utilities/**/*",
    "datasets/**/*",
    "notebooks/**/*",
    "outputs/**/*"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
